feat: add comments to lesson 3

--- a/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/3 - Tipos e Conversão de tipos.ipynb
+++ b/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/3 - Tipos e Conversão de tipos.ipynb
@@ -35,12 +35,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importação da lib do numpy como np"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria um dado do tipo float de 32 bits, ou seja, single precision"
    ]
   },
   {
@@ -65,6 +81,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria um array com dados do tipo inteiro de 32 ou 64 bits, igual o long do C"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -86,6 +110,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria dados espaçados dentro de um intervalo - nesse caso de 0 a 2 - com valores do tipo unsigned int de 8 bits, ou seja, valores entre 0 e 255."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -104,6 +136,14 @@
    "source": [
     "z = np.arange(3, dtype=np.uint8)\n",
     "z"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria um array de 3 elementos do tipo float de 32 bits"
    ]
   },
   {
@@ -141,6 +181,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converte os valores de um array para o tipo float."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -158,6 +206,14 @@
    ],
    "source": [
     "z.astype(float)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converte os valores do array z para inteiros de 8 bits."
    ]
   },
   {
@@ -181,10 +237,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para verificarmos o tipo de um array Numpy, basta verificarmos o seu atributo dtype."
+    "Utiliza o atributo dtype para verificar o tipo de um array do numpy"
    ]
   },
   {
