feat: add comments to lesson 8

--- a/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/8 - Leitura e salvamento de datasets.ipynb
+++ b/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/8 - Leitura e salvamento de datasets.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria um arquivo de leitura a partir da função open e utiliza o método read() para realizar a leitura dos dados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -26,6 +34,14 @@
     "text = file.read()\n",
     "\n",
     "file.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imprime o conteúdo contido no arquivo de texto"
    ]
   },
   {
@@ -53,6 +69,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria um arquivo de leitura a partir da função open e utiliza o método read() para realizar a leitura dos dados, mas dessa vez utilizando o método de declaração with, assim sendo capaz de tratar exceções de forma mais limpa e legível."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -76,6 +100,14 @@
    "metadata": {},
    "source": [
     "## Importando dados com o Numpy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa a lib do numpy, carrega um arquivo .txt localizado no diretório local e definir como delimitador o caractere ','. Dessa forma, a saída será um array do conjunto de dados carregados do arquivo."
    ]
   },
   {
@@ -110,12 +142,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa a lib do numpy, carrega um arquivo .txt localizado no diretório local e definir como delimitador o caractere ','. Dessa forma, a saída será um array do conjunto de dados carregados do arquivo, contudo as primeiras n linhas serão ignoradas com todo o seu conteúdo ao ser utilizado o parâmetro skiprows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = np.loadtxt(filename, delimiter=',', skiprows=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imprime os dados carregados do arquivo e armazenado na variável data"
    ]
   },
   {
@@ -139,6 +187,14 @@
    ],
    "source": [
     "print(data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carrega um arquivo .txt localizado no diretório local e definir como delimitador o caractere ','. Dessa forma, a saída será um array do conjunto de dados carregados do arquivo somente a partir das colunas 0 e 2, definidas pelo parâmetro usecols. Além disso, as primeiras n linhas serão ignoradas com todo o seu conteúdo ao ser utilizado o parâmetro skiprows"
    ]
   },
   {
@@ -261,6 +317,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carrega um arquivo .txt localizado no diretório local e definir como delimitador o caractere ','. Dessa forma, a saída será um array do conjunto de dados carregados do arquivo. O código ainda define os tipos de dados finais como sendo do tipo string a partir do parâmetro dtype."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -302,6 +366,14 @@
     "- Realizar estatísticas,\n",
     "- Trabalhar com dados de séries temporais,\n",
     "- ..."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa a lib pandas como pd, realiza a leitura de um .csv localizado no diretório local e, após isso, imprime o DataFrame completo, com as linhas e colunas e as informações formatadas seguindo o .csv."
    ]
   },
   {
@@ -460,6 +532,14 @@
     "data = pd.read_csv(filename)\n",
     "\n",
     "data.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partir do atributo values é possível retornar todos os valores de dados presentes no DataFrame como um array"
    ]
   },
   {
