--- a/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/9 - Particionamento do conjunto de dados em conjunto de treino e conjunto de teste.ipynb
+++ b/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/9 - Particionamento do conjunto de dados em conjunto de treino e conjunto de teste.ipynb
@@ -8,6 +8,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Acessa o .csv contido no link de acesso abaixo e realiza a leitura do arquivo. A partir disso, define uma série de colunas para cada informação contida no conjunto de dados e define uma coluna de identificador único para cada conjunto de dados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -200,10 +208,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Divide o array ou a matriz em subconjuntos aleatórios de teste."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n\u001b[1;32m      3\u001b[0m X, y \u001b[39m=\u001b[39m df_wine\u001b[39m.\u001b[39miloc[:, \u001b[39m1\u001b[39m:]\u001b[39m.\u001b[39mvalues, df_wine\u001b[39m.\u001b[39miloc[:, \u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mvalues\n\u001b[1;32m      5\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m\\\n\u001b[1;32m      6\u001b[0m     train_test_split(X, y, \n\u001b[1;32m      7\u001b[0m                      test_size\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m, \n\u001b[1;32m      8\u001b[0m                      random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, \n\u001b[1;32m      9\u001b[0m                      stratify\u001b[39m=\u001b[39my)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -233,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
