feat: add comments to lesson 5

--- a/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/5 - Lidando com atributos categóricos.ipynb
+++ b/2019/01-Pre-processamento_Limpeza_Analise_de_Dados/5 - Lidando com atributos categóricos.ipynb
@@ -15,8 +15,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa a lib pandas como pd, cria um DataFrame com 3 conjuntos de dados, sendo o tipo de dados strings e valores inteiros. Logo após a criação do DataFrame, há a definição das colunas para cada dado criado no DataFrame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +87,7 @@
        "2      azul      XG   15.3      classe2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,8 +111,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria um dictionary que define, para cada chave, um valor referente a um tamanho específico. Após isso, ao acessar a coluna 'tamanho' do DataFrame o dictionary é utilizado no método 'map', por conseguinte transformando os dados referentes aos símbolos dos tamanhos em valores numéricos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +183,7 @@
        "2      azul        3   15.3      classe2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,8 +198,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "É criado umn novo dictionary, todavia a partir dos dados da variável size_mapping, em que inverte a posição da chave e valor, dessa forma invertendo a relação criada no dictionary anterior. Com isso feito, ao acessar a coluna 'tamanho' e aplicar a variável inv_size_mapping no método 'map', os valores numéricos presentes na coluna se tornarão nos símbolos referente aos tamanhos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +219,7 @@
        "Name: tamanho, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,8 +237,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa a library numpy como np, cria um dictionary para converter os rótulos de classe de strings para valores inteiros"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +255,7 @@
        "{'classe1': 0, 'classe2': 1}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,14 +263,13 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Criando um dicionario para converter rótulos de classe de strings para inteiros\n",
     "class_mapping = {label: idx for idx, label in enumerate(np.unique(df['rotuloclasse']))}\n",
     "class_mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -301,20 +332,28 @@
        "2      azul        3   15.3             1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# to convert class labels from strings to integers\n",
+    "\n",
     "df['rotuloclasse'] = df['rotuloclasse'].map(class_mapping)\n",
     "df"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reverte os valores inteiros na coluna rotuloclasse para strings contidos anteriormente no mapping"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,13 +416,13 @@
        "2      azul        3   15.3      classe2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# reverse the class label mapping\n",
+    "\n",
     "inv_class_mapping = {v: k for k, v in class_mapping.items()}\n",
     "df['rotuloclasse'] = df['rotuloclasse'].map(inv_class_mapping)\n",
     "df"
@@ -406,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
