--- a/lessons/crimes/analyse.ipynb
+++ b/lessons/crimes/analyse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[300 rows x 32 columns]"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 459,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,6 @@
     "\n",
     "\n",
     "df_larceny = pd.concat(pd.read_excel(\"Latrocinio_2018_2022.xlsx\", sheet_name=None), ignore_index=True)\n",
-    "\n",
     "df_larceny_sp = df_larceny[df_larceny[\"MUNICIPIO_CIRCUNSCRICAO\"] == \"São Paulo\"]\n",
     "df_larceny_sp.columns = map(str.lower, df_larceny_sp.columns)\n",
     "df_larceny_sp.columns = map(str.strip, df_larceny_sp.columns)\n",
@@ -437,38 +436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_63203/3923927727.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_larceny_sp[\"idade_pessoa\"] = df_larceny_sp[\"idade_pessoa\"].fillna(0).astype(int)\n",
-      "/tmp/ipykernel_63203/3923927727.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_larceny_sp.drop([\"latitude\", \"longitude\", \"mês estatistica\", \"ano estatistica\", \"natureza_apurada\", \"ano\", \"mês\"], inplace=True, axis=1)\n",
-      "/tmp/ipykernel_63203/3923927727.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_larceny_sp[\"profissao\"] = df_larceny_sp[\"profissao\"].fillna(\"Sem Registro\")\n",
-      "/tmp/ipykernel_63203/3923927727.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_larceny_sp[\"ano\"] = df_larceny_sp[\"datahora_registro_bo\"].apply(lambda x: x.year)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -865,23 +835,23 @@
        "[300 rows x 26 columns]"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 460,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_larceny_sp = df_larceny_sp.copy()\n",
     "df_larceny_sp[\"idade_pessoa\"] = df_larceny_sp[\"idade_pessoa\"].fillna(0).astype(int)\n",
     "df_larceny_sp.drop([\"latitude\", \"longitude\", \"mês estatistica\", \"ano estatistica\", \"natureza_apurada\", \"ano\", \"mês\"], inplace=True, axis=1)\n",
     "df_larceny_sp[\"profissao\"] = df_larceny_sp[\"profissao\"].fillna(\"Sem Registro\")\n",
     "df_larceny_sp[\"ano\"] = df_larceny_sp[\"datahora_registro_bo\"].apply(lambda x: x.year)\n",
-    "df_larceny_sp\n",
-    "\n"
+    "df_larceny_sp\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +920,7 @@
        "Name: nº de vit em latro, dtype: int64"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 462,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +953,7 @@
        "Name: nº de vit em latro, Length: 108, dtype: int64"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 463,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 464,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +974,7 @@
        "<Axes: xlabel='profissao'>"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 464,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1026,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 465,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1005,7 @@
        "<Axes: xlabel='ano'>"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 465,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1057,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 466,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1078,7 @@
        "Masculino                   279"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 466,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1098,7 @@
        "<Axes: ylabel='sexo_pessoa'>"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 467,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1150,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1549,7 @@
        "[11 rows x 25 columns]"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [
     {
@@ -1661,16 +1631,16 @@
        "Masculino         10     163             10     83     12         1"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 469,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_larceny_sp_sex[\"cor_pele\"] = df_larceny_sp_sex[\"cor_pele\"].str.strip()\n",
+    "df_larceny_sp[\"cor_pele\"] = df_larceny_sp[\"cor_pele\"].str.strip()\n",
     "\n",
     "df_larceny_sp_pivot = pd.pivot_table(\n",
-    "  df_larceny_sp_sex,\n",
+    "  df_larceny_sp,\n",
     "  index=\"sexo_pessoa\",\n",
     "  columns=\"cor_pele\",\n",
     "  values=\"nº de vit em latro\",\n",
@@ -1681,16 +1651,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f30b5d91c60>"
+       "<matplotlib.legend.Legend at 0x7fa07fca6e60>"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     },
